# kpp_spin_generator

./: CMakeLists.txt  README.md  kpp_spin_generator.cc
include/: Analyzer.hh  FitFunctions.h  GlobalVariables.h  KppGenerator.hh  KppGeneratorCommon.hh  LambdaDecay.hh
param/: initial_pwave.txt  initial_swave.txt
src/: Analyzer.cc  KppGenerator.cc  LambdaDecay.cc
